# NewApp-Research-Features

./: .gitignore  Gemfile  README.MD  build.gradle.kts  gradle.properties  settings.gradle.kts
.cursor/rules/: compose-screen-architecture.mdc  use-dstopbar.mdc
app/: build.gradle.kts  google-services.json  proguard-rules-base.pro  proguard-rules-prod.pro
app/src/dev/: google-services.json
app/src/dev/res/values/: strings.xml
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/prod/: google-services.json
app/src/prod/res/values/: strings.xml
app/src/qa/: google-services.json
app/src/qa/res/values/: strings.xml
app/src/staging/res/values/: strings.xml
config/signing/: debug.keystore
config/version/: version.properties
fastlane/: Appfile  Fastfile  README.md
fastlane/actions/: act_build_app.rb  act_bump_version.rb  act_fetch_version.rb  act_publish_release.rb  act_publish_snapshot.rb  act_setup_config.rb  act_upload_firebase.rb  act_upload_internal_track.rb
gradle/: libs.versions.toml  libsCustom.versions.toml
gradle/wrapper/: gradle-wrapper.properties
modules/authChallenge/api/: build.gradle.kts
modules/authChallenge/extension/: build.gradle.kts
modules/authChallenge/impl/: build.gradle.kts
modules/authChallenge/impl/src/main/: AndroidManifest.xml
modules/baseApp/: build.gradle.kts
modules/baseApp/src/main/: AndroidManifest.xml
modules/callDetection/api/: build.gradle.kts
modules/callDetection/impl/: build.gradle.kts
modules/callDetection/impl/src/main/: AndroidManifest.xml
modules/callProtection/api/: build.gradle.kts
modules/callProtection/impl/: build.gradle.kts
modules/callProtection/impl/src/main/: AndroidManifest.xml
modules/commonAndroid/: build.gradle.kts
modules/commonKotlin/: build.gradle.kts
modules/commonUseCases/api/: build.gradle.kts
modules/commonUseCases/impl/: build.gradle.kts
modules/designSystem/: build.gradle.kts
modules/gate1/: CMakeLists.txt  INTEGRATION_GUIDE.md  gate1_config.json
modules/gate1/native/: CMakeLists.txt
modules/gate1/native/src/: gate1_features.c
modules/gate1/src/main/: AndroidManifest.xml
modules/gate1/src/main/assets/: gate1_late_fusion.onnx
modules/gate1/src/main/java/com/safenest/gate1/: Gate1Classifier.kt
modules/home/api/: build.gradle.kts
modules/home/extension/: build.gradle.kts
modules/home/impl/: build.gradle.kts  record.json  screen.json
modules/home/impl/src/main/: AndroidManifest.xml
modules/notificationInterceptor/api/: build.gradle.kts
modules/notificationInterceptor/impl/: build.gradle.kts
modules/notificationInterceptor/impl/src/main/: AndroidManifest.xml
modules/onDeviceModel/: CMakeLists.txt  INTEGRATION_GUIDE.md  build.gradle.kts  gate1_jni.c
modules/onDeviceModel/native/: CMakeLists.txt
modules/onDeviceModel/native/include/: gate1_features.h
modules/onDeviceModel/native/src/: gate1_features.c  gate1_jni.c
modules/onDeviceModel/src/main/: AndroidManifest.xml
modules/onDeviceModel/src/main/assets/: gate1_keyfinding_mappings.json  gate1_lightgbm.onnx  gate2_prompts.json
modules/onDeviceModel/src/main/assets/config/: audio_prompts.json  gate1_config.json  gate1_keyfinding_mappings.json  gate2_prompts.json  gate2_signal_mappings.json  ocr_prompts.json
modules/onDeviceModel/src/main/cpp/: CMakeLists.txt  gate1_features.c  gate1_features.h  gate1_jni.c  llama_jni.cpp
modules/onDeviceModel/src/main/java/com/safenest/demo/features/scamAnalyzer/impl/utils/: PhishingLlmAnalyzer.kt
modules/onDeviceModel/src/main/java/com/safenest/urlanalyzer/: ModelComponents.kt  ModelDownloader.kt  ModelManager.kt  ModelModule.kt  Models.kt  ResultCombiner.kt  URLAnalyzerError.kt  URLAnalyzerOrchestrator.kt
modules/onDeviceModel/src/main/java/com/safenest/urlanalyzer/audio/: AudioAnalyzer.kt
modules/onDeviceModel/src/main/java/com/safenest/urlanalyzer/gate1/: Gate1Classifier.kt
modules/onDeviceModel/src/main/java/com/safenest/urlanalyzer/gate2/: Gate2Classifier.kt  LMClient.kt  PromptBuilder.kt  SignalExtractor.kt
modules/onDeviceModel/src/main/java/com/safenest/urlanalyzer/image/: ImageAnalyzer.kt
modules/onDeviceModel/src/main/java/com/safenest/urlanalyzer/local_analyzer/: HomographAnalyzer.kt  LocalURLAnalyzer.kt  PageFetcher.kt  SSLChecker.kt  TyposquatAnalyzer.kt
modules/onDeviceModel/src/main/java/com/safenest/urlanalyzer/shared/: LMClient.kt  LlamaEngine.kt
modules/onDeviceModel/src/main/java/com/safenest/urlanalyzer/text/: EntityExtractor.kt  PIIRedactor.kt  SMSAnalyzerOrchestrator.kt  TextAnalyzerClassifier.kt
modules/onDeviceModel/src/main/java/com/safenest/urlanalyzer/url/: URLAnalyzerOrchestrator.kt
modules/onDeviceModel/src/main/java/com/safenest/urlanalyzer/url/gate1/: Gate1Classifier.kt
modules/permissionManager1/api/: build.gradle.kts
modules/permissionManager1/impl/: build.gradle.kts
modules/permissionManager1/impl/src/main/: AndroidManifest.xml
modules/permissionmanager/api/: build.gradle.kts
modules/permissionmanager/impl/: build.gradle.kts
modules/permissionmanager/impl/src/main/: AndroidManifest.xml
modules/phishingDetection/api/: build.gradle.kts
modules/phishingDetection/impl/: build.gradle.kts
modules/safeBrowsing/api/: build.gradle.kts
modules/safeBrowsing/impl/: build.gradle.kts
modules/scamAnalyzer/api/: build.gradle.kts
modules/scamAnalyzer/impl/: build.gradle.kts
modules/scamAnalyzer/impl/src/main/cpp/: CMakeLists.txt  SETUP.md  llm_jni.cpp
modules/signIn/api/: build.gradle.kts
modules/signIn/extension/: build.gradle.kts
modules/signIn/impl/: build.gradle.kts
modules/splash/api/: build.gradle.kts
modules/splash/impl/: build.gradle.kts
modules/urlGuard/api/: build.gradle.kts
modules/urlGuard/impl/: build.gradle.kts
modules/urlGuard1/api/: build.gradle.kts
modules/urlGuard1/impl/: build.gradle.kts
modules/urlguard/api/: build.gradle.kts
modules/urlguard/impl/: build.gradle.kts
scripts/: fetch_new_scripts.sh  setup.sh
(+1159 files in other folders)
